fix: change style

--- a/src/page_components/index/useRegister/index.module.scss
+++ b/src/page_components/index/useRegister/index.module.scss
@@ -34,6 +34,12 @@
   .button {
     width: 200px;
     margin: 20px 0;
+
+    &Loading {
+      width: 200px;
+      margin: 20px 0;
+      color: rgba(#fff, 0.7);
+    }
   }
   .error {
     font-size: 12px;
